--- a/Clase 03/Homework.ipynb
+++ b/Clase 03/Homework.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -28,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +41,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,6 +96,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,6 +205,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -483,6 +491,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -492,6 +501,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "primero = np.arange(10)\n",
+    "print(primero) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.09090909 0.18181818 0.27272727 0.36363636 0.45454545\n",
+      " 0.54545455 0.63636364 0.72727273 0.81818182 0.90909091 1.\n",
+      " 1.09090909 1.18181818 1.27272727 1.36363636 1.45454545 1.54545455\n",
+      " 1.63636364 1.72727273 1.81818182 1.90909091 2.         2.09090909\n",
+      " 2.18181818 2.27272727 2.36363636 2.45454545 2.54545455 2.63636364\n",
+      " 2.72727273 2.81818182 2.90909091 3.         3.09090909 3.18181818\n",
+      " 3.27272727 3.36363636 3.45454545 3.54545455 3.63636364 3.72727273\n",
+      " 3.81818182 3.90909091 4.         4.09090909 4.18181818 4.27272727\n",
+      " 4.36363636 4.45454545 4.54545455 4.63636364 4.72727273 4.81818182\n",
+      " 4.90909091 5.         5.09090909 5.18181818 5.27272727 5.36363636\n",
+      " 5.45454545 5.54545455 5.63636364 5.72727273 5.81818182 5.90909091\n",
+      " 6.         6.09090909 6.18181818 6.27272727 6.36363636 6.45454545\n",
+      " 6.54545455 6.63636364 6.72727273 6.81818182 6.90909091 7.\n",
+      " 7.09090909 7.18181818 7.27272727 7.36363636 7.45454545 7.54545455\n",
+      " 7.63636364 7.72727273 7.81818182 7.90909091 8.         8.09090909\n",
+      " 8.18181818 8.27272727 8.36363636 8.45454545 8.54545455 8.63636364\n",
+      " 8.72727273 8.81818182 8.90909091 9.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "primero= (np.linspace(0,9,100))\n",
+    "print(primero)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -501,6 +563,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.ndarray' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[56], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m entero \u001b[39m=\u001b[39m  (np\u001b[39m.\u001b[39marange(\u001b[39m10\u001b[39m,\u001b[39m101\u001b[39m))\n\u001b[0;32m      2\u001b[0m mascara\u001b[39m=\u001b[39m ((entero \u001b[39m%\u001b[39m \u001b[39m3\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m \u001b[39mprint\u001b[39;49m(mascara)\n\u001b[0;32m      4\u001b[0m entero[mascara]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -511,6 +593,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -521,6 +625,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -901,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
