--- a/Clase 03/Homework.ipynb
+++ b/Clase 03/Homework.ipynb
@@ -564,22 +564,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m entero \u001b[39m=\u001b[39m  (np\u001b[39m.\u001b[39marange(\u001b[39m10\u001b[39m,\u001b[39m101\u001b[39m))\n\u001b[0;32m      2\u001b[0m mascara\u001b[39m=\u001b[39m ((entero \u001b[39m%\u001b[39m \u001b[39m3\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m))\n\u001b[1;32m----> 3\u001b[0m \u001b[39mprint\u001b[39;49m(mascara)\n\u001b[0;32m      4\u001b[0m entero[mascara]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False  True False False  True False False  True False False  True\n",
+      " False False  True False False  True False False  True False False  True\n",
+      " False False  True False False  True False False  True False False  True\n",
+      " False False  True False False  True False False  True False False  True\n",
+      " False False  True False False  True False False  True False False  True\n",
+      " False False  True False False  True False False  True False False  True\n",
+      " False False  True False False  True False False  True False False  True\n",
+      " False False  True False False  True False]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60,\n",
+       "       63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "entero =  (np.arange(10,101))\n",
+    "mascara= ((entero % 3 == 0))\n",
+    "print(mascara)\n",
+    "entero[mascara]"
+   ]
   },
   {
    "attachments": {},
