[dev] chore (ejercicio3): shape

--- a/Clase 03/Homework.ipynb
+++ b/Clase 03/Homework.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -629,8 +629,17 @@
     }
    ],
    "source": [
-    "\n"
+    "tupla_segunda= (5,10)\n",
+    "segundo = np.zeros(tupla_segunda)\n",
+    "print(segundo)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
