--- a/Clase 03/Homework.ipynb
+++ b/Clase 03/Homework.ipynb
@@ -669,16 +669,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "segundo[4] = 1"
+    "segundo[3] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -687,11 +687,77 @@
        "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
        "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]])"
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "segundo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segundo [:,2] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 2., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 2., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 1., 2., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [0., 0., 2., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "segundo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segundo [:,7] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 2., 0., 0., 0., 0., 2., 0., 0.],\n",
+       "       [1., 1., 2., 1., 1., 1., 1., 2., 1., 1.],\n",
+       "       [0., 0., 2., 0., 0., 0., 0., 2., 0., 0.],\n",
+       "       [1., 1., 2., 1., 1., 1., 1., 2., 1., 1.],\n",
+       "       [0., 0., 2., 0., 0., 0., 0., 2., 0., 0.]])"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
