[Clase 06] chore (Homework_06): ejercicio 1 y 2

--- a/Clase 06/Homework_06.ipynb
+++ b/Clase 06/Homework_06.ipynb
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hash_function(key):\n",
-    "    return sum(index * ord(character) for index, character in enumerate(repr(key), start=1))"
+    "    return sum(index * ord(character) for index, character in enumerate(repr(key), start=1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +55,316 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Emisiones_CO2.csv',sep='|',decimal=',', encoding='latin-1')"
+    "df = pd.read_csv('Emisiones_CO2.csv',sep='|',decimal=',', encoding='latin-1',thousands  = '.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11127 entries, 0 to 11126\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                               Non-Null Count  Dtype  \n",
+      "---  ------                               --------------  -----  \n",
+      " 0   Código de país                       11127 non-null  object \n",
+      " 1   Nombre del país                      11127 non-null  object \n",
+      " 2   Región                               11127 non-null  object \n",
+      " 3   Año                                  11127 non-null  int64  \n",
+      " 4   CO2 (kt)                             9032 non-null   float64\n",
+      " 5   CO2 per cápita (toneladas métricas)  9029 non-null   float64\n",
+      "dtypes: float64(2), int64(1), object(3)\n",
+      "memory usage: 521.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 9029 entries, 26 to 11126\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                               Non-Null Count  Dtype  \n",
+      "---  ------                               --------------  -----  \n",
+      " 0   Código de país                       9029 non-null   object \n",
+      " 1   Nombre del país                      9029 non-null   object \n",
+      " 2   Región                               9029 non-null   object \n",
+      " 3   Año                                  9029 non-null   int64  \n",
+      " 4   CO2 (kt)                             9029 non-null   float64\n",
+      " 5   CO2 per cápita (toneladas métricas)  9029 non-null   float64\n",
+      "dtypes: float64(2), int64(1), object(3)\n",
+      "memory usage: 493.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns = {'Código de país': 'cod_pais',\n",
+    "                      'Nombre del país': 'nom_pais',\n",
+    "                     'CO2 (kt)': 'emision_co2',\n",
+    "                     'CO2 per cápita (toneladas métricas)': 'emisiones_co2_percapita'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cod_pais</th>\n",
+       "      <th>nom_pais</th>\n",
+       "      <th>Región</th>\n",
+       "      <th>Año</th>\n",
+       "      <th>emision_co2</th>\n",
+       "      <th>emisiones_co2_percapita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>179.683</td>\n",
+       "      <td>2.868319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>447.374</td>\n",
+       "      <td>7.234964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>612.389</td>\n",
+       "      <td>10.026508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>649.059</td>\n",
+       "      <td>10.634733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1840.830</td>\n",
+       "      <td>29.620165</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cod_pais nom_pais                   Región   Año  emision_co2  \\\n",
+       "26      ABW    Aruba  América Latina y Caribe  1986      179.683   \n",
+       "27      ABW    Aruba  América Latina y Caribe  1987      447.374   \n",
+       "28      ABW    Aruba  América Latina y Caribe  1988      612.389   \n",
+       "29      ABW    Aruba  América Latina y Caribe  1989      649.059   \n",
+       "30      ABW    Aruba  América Latina y Caribe  1990     1840.830   \n",
+       "\n",
+       "    emisiones_co2_percapita  \n",
+       "26                 2.868319  \n",
+       "27                 7.234964  \n",
+       "28                10.026508  \n",
+       "29                10.634733  \n",
+       "30                29.620165  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#implementar una nueva columna, que contenga el resultado de una función Hash aplicada sobre el campo \"Código de País\" y se denomine \"Clave_Hash\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cod_pais</th>\n",
+       "      <th>nom_pais</th>\n",
+       "      <th>Región</th>\n",
+       "      <th>Año</th>\n",
+       "      <th>emision_co2</th>\n",
+       "      <th>emisiones_co2_percapita</th>\n",
+       "      <th>Clave_Hash</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>179.683</td>\n",
+       "      <td>2.868319</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>447.374</td>\n",
+       "      <td>7.234964</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>612.389</td>\n",
+       "      <td>10.026508</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>649.059</td>\n",
+       "      <td>10.634733</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>ABW</td>\n",
+       "      <td>Aruba</td>\n",
+       "      <td>América Latina y Caribe</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1840.830</td>\n",
+       "      <td>29.620165</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cod_pais nom_pais                   Región   Año  emision_co2  \\\n",
+       "26      ABW    Aruba  América Latina y Caribe  1986      179.683   \n",
+       "27      ABW    Aruba  América Latina y Caribe  1987      447.374   \n",
+       "28      ABW    Aruba  América Latina y Caribe  1988      612.389   \n",
+       "29      ABW    Aruba  América Latina y Caribe  1989      649.059   \n",
+       "30      ABW    Aruba  América Latina y Caribe  1990     1840.830   \n",
+       "\n",
+       "    emisiones_co2_percapita  Clave_Hash  \n",
+       "26                 2.868319         910  \n",
+       "27                 7.234964         910  \n",
+       "28                10.026508         910  \n",
+       "29                10.634733         910  \n",
+       "30                29.620165         910  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Clave_Hash'] = (df['cod_pais']).apply(hash_function)\n",
+    "df.head()"
    ]
   },
   {
@@ -67,6 +372,158 @@
    "metadata": {},
    "source": [
     "2. A partir del Dataframe creado en el punto 1, construir uno nuevo, que contenga solo los valores distintos de la tupla \"Clave_Hash\", \"Código de País\" , \"Nombre de país\" y \"Región\". Quitando luego del dataframe original los campos \"Código de País\" , \"Nombre de país\" y \"Región\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#construir uno nuevo, que contenga solo los valores distintos de la tupla \"Clave_Hash\", \"Código de País\" , \"Nombre de país\" y \"Región\n",
+    "df_valor_distinto = df[['Clave_Hash','cod_pais','nom_pais','Región']].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Año</th>\n",
+       "      <th>emision_co2</th>\n",
+       "      <th>emisiones_co2_percapita</th>\n",
+       "      <th>Clave_Hash</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1986</td>\n",
+       "      <td>179.683</td>\n",
+       "      <td>2.868319</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>447.374</td>\n",
+       "      <td>7.234964</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>612.389</td>\n",
+       "      <td>10.026508</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1989</td>\n",
+       "      <td>649.059</td>\n",
+       "      <td>10.634733</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>1840.830</td>\n",
+       "      <td>29.620165</td>\n",
+       "      <td>910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11122</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>9732.220</td>\n",
+       "      <td>0.731867</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11123</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>7682.370</td>\n",
+       "      <td>0.569255</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11124</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>8239.750</td>\n",
+       "      <td>0.600521</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11125</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>9028.150</td>\n",
+       "      <td>0.646073</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11126</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>9860.560</td>\n",
+       "      <td>0.691698</td>\n",
+       "      <td>951</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9029 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Año  emision_co2  emisiones_co2_percapita  Clave_Hash\n",
+       "26     1986      179.683                 2.868319         910\n",
+       "27     1987      447.374                 7.234964         910\n",
+       "28     1988      612.389                10.026508         910\n",
+       "29     1989      649.059                10.634733         910\n",
+       "30     1990     1840.830                29.620165         910\n",
+       "...     ...          ...                      ...         ...\n",
+       "11122  2007     9732.220                 0.731867         951\n",
+       "11123  2008     7682.370                 0.569255         951\n",
+       "11124  2009     8239.750                 0.600521         951\n",
+       "11125  2010     9028.150                 0.646073         951\n",
+       "11126  2011     9860.560                 0.691698         951\n",
+       "\n",
+       "[9029 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(['cod_pais', 'nom_pais', 'Región'], inplace = True, axis = 1) \n",
+    "df#quitar codigo pais nombre y region"
    ]
   }
  ],
@@ -86,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
